fix window cropping

--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -592,6 +592,10 @@ video {
   position: static;
 }
 
+.fixed {
+  position: fixed;
+}
+
 .isolate {
   isolation: isolate;
 }
